--- a/eeg_Arti_implementRNN.ipynb
+++ b/eeg_Arti_implementRNN.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,34 +237,36 @@
     "# Masking layer for pre-trained embeddings\n",
     "#model.add(Masking(mask_value=0.0))\n",
     "#model.add(Input(shape= (input_length, )))\n",
-    "model.add(Dense(256, activation= 'tanh', name= \"d1\"))\n",
+    "#model.add(Dense(256, activation= 'tanh', name= \"d1\"))\n",
     "# Recurrent layer\n",
-    "model.add(LSTM(32, return_sequences=False, \n",
-    "               dropout=0.1, recurrent_dropout=0.1, name= 'l1'))\n",
+    "model.add(LSTM(64, return_sequences=False, \n",
+    "               dropout=0.01, recurrent_dropout=0.01, name= 'l1'))\n",
+    "#model.add(LSTM(64, return_sequences=True, \n",
+    " #              dropout=0.01, recurrent_dropout=0.01, name= 'l2'))\n",
     "\n",
     "# Fully connected layer\n",
-    "model.add(Dense(256, activation='relu', name='d2'))\n",
+    "model.add(Dense(1048, activation='relu', name='d2'))\n",
     "\n",
     "# Dropout for regularization\n",
-    "model.add(Dropout(0.5))\n",
-    "\n",
+    "model.add(Dropout(0.1))\n",
+    "model.add(Dense(512, activation= 'relu', name= 'd3'))\n",
     "# Output layer\n",
-    "model.add(Dense(output_length, activation='sigmoid', name='d3'))\n",
-    "optimizer= keras.optimizers.Adam(lr=0.01, beta_1=0.9, beta_2=0.999, epsilon=None, decay=0.0, amsgrad=False)\n",
+    "model.add(Dense(output_length, activation='softmax', name='d4'))\n",
+    "optimizer= keras.optimizers.Adam(lr=0.001, beta_1=0.9, beta_2=0.999, epsilon=None, decay=0.0, amsgrad=False)\n",
     "# Compile the model\n",
     "model.compile(optimizer= optimizer, loss='categorical_crossentropy', metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "\n",
     "# Create callbacks\n",
-    "callbacks = [EarlyStopping(monitor='val_loss', patience=5),\n",
+    "callbacks = [EarlyStopping(monitor='val_loss'),\n",
     "             ModelCheckpoint('D:/001/arti/separatedEpochs/model.h5', save_best_only= True, \n",
     "                             save_weights_only=False)]"
    ]
@@ -272,20 +274,149 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 1500 samples, validate on 244 samples\n",
       "Epoch 1/150\n",
-      "1408/1500 [===========================>..] - ETA: 25s - loss: 1.5953 - acc: 0.2592"
+      "1500/1500 [==============================] - 73s 49ms/step - loss: 1.8589 - acc: 0.2573\n",
+      "Epoch 2/150\n",
+      "1500/1500 [==============================] - 69s 46ms/step - loss: 1.7334 - acc: 0.3073\n",
+      "Epoch 3/150\n",
+      "1500/1500 [==============================] - 69s 46ms/step - loss: 1.5637 - acc: 0.3153\n",
+      "Epoch 4/150\n",
+      "1500/1500 [==============================] - 71s 47ms/step - loss: 1.5342 - acc: 0.3273\n",
+      "Epoch 5/150\n",
+      "1500/1500 [==============================] - 68s 46ms/step - loss: 1.5215 - acc: 0.3407\n",
+      "Epoch 6/150\n",
+      "1500/1500 [==============================] - 68s 46ms/step - loss: 1.5035 - acc: 0.3573\n",
+      "Epoch 7/150\n",
+      "1500/1500 [==============================] - 257s 171ms/step - loss: 1.4897 - acc: 0.3560\n",
+      "Epoch 8/150\n",
+      "1500/1500 [==============================] - 69s 46ms/step - loss: 1.4938 - acc: 0.3447\n",
+      "Epoch 9/150\n",
+      "1500/1500 [==============================] - 707s 471ms/step - loss: 1.4881 - acc: 0.3567\n",
+      "Epoch 10/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 1.4867 - acc: 0.3580\n",
+      "Epoch 11/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 1.4689 - acc: 0.3660\n",
+      "Epoch 12/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 1.4507 - acc: 0.3813\n",
+      "Epoch 13/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 1.4316 - acc: 0.4007\n",
+      "Epoch 14/150\n",
+      "1500/1500 [==============================] - 42s 28ms/step - loss: 1.4354 - acc: 0.3967\n",
+      "Epoch 15/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 1.4065 - acc: 0.4053\n",
+      "Epoch 16/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 1.4003 - acc: 0.4107\n",
+      "Epoch 17/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 1.3781 - acc: 0.4367\n",
+      "Epoch 18/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 1.4040 - acc: 0.4107\n",
+      "Epoch 19/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 1.3690 - acc: 0.4313\n",
+      "Epoch 20/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 1.3528 - acc: 0.4407\n",
+      "Epoch 21/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 1.3351 - acc: 0.4533\n",
+      "Epoch 22/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 1.3417 - acc: 0.4407\n",
+      "Epoch 23/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 1.3397 - acc: 0.4307\n",
+      "Epoch 24/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 1.3149 - acc: 0.4453\n",
+      "Epoch 25/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 1.2879 - acc: 0.4747\n",
+      "Epoch 26/150\n",
+      "1500/1500 [==============================] - 42s 28ms/step - loss: 1.2947 - acc: 0.4793\n",
+      "Epoch 27/150\n",
+      "1500/1500 [==============================] - 12522s 8s/step - loss: 1.2762 - acc: 0.4587\n",
+      "Epoch 28/150\n",
+      "1500/1500 [==============================] - 70s 47ms/step - loss: 1.2544 - acc: 0.4907\n",
+      "Epoch 29/150\n",
+      "1500/1500 [==============================] - 69s 46ms/step - loss: 1.2367 - acc: 0.4960\n",
+      "Epoch 30/150\n",
+      "1500/1500 [==============================] - 69s 46ms/step - loss: 1.1900 - acc: 0.5127\n",
+      "Epoch 31/150\n",
+      "1500/1500 [==============================] - 69s 46ms/step - loss: 1.1838 - acc: 0.5093\n",
+      "Epoch 32/150\n",
+      "1500/1500 [==============================] - 69s 46ms/step - loss: 1.1726 - acc: 0.5293\n",
+      "Epoch 33/150\n",
+      "1500/1500 [==============================] - 74s 49ms/step - loss: 1.1456 - acc: 0.5507\n",
+      "Epoch 34/150\n",
+      "1500/1500 [==============================] - 72s 48ms/step - loss: 1.1238 - acc: 0.5500\n",
+      "Epoch 35/150\n",
+      "1500/1500 [==============================] - 69s 46ms/step - loss: 1.0734 - acc: 0.5873\n",
+      "Epoch 36/150\n",
+      "1500/1500 [==============================] - 69s 46ms/step - loss: 1.0535 - acc: 0.5733\n",
+      "Epoch 37/150\n",
+      "1500/1500 [==============================] - 208s 139ms/step - loss: 1.0640 - acc: 0.5827\n",
+      "Epoch 38/150\n",
+      "1500/1500 [==============================] - 44s 29ms/step - loss: 1.0157 - acc: 0.5907\n",
+      "Epoch 39/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.9601 - acc: 0.6380\n",
+      "Epoch 40/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 0.9588 - acc: 0.6360\n",
+      "Epoch 41/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 0.9292 - acc: 0.6420\n",
+      "Epoch 42/150\n",
+      "1500/1500 [==============================] - 42s 28ms/step - loss: 0.8903 - acc: 0.6587\n",
+      "Epoch 43/150\n",
+      "1500/1500 [==============================] - 44s 29ms/step - loss: 0.8521 - acc: 0.6700\n",
+      "Epoch 44/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.8587 - acc: 0.6660\n",
+      "Epoch 45/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.8443 - acc: 0.6780\n",
+      "Epoch 46/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.7997 - acc: 0.6987\n",
+      "Epoch 47/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.7655 - acc: 0.7053\n",
+      "Epoch 48/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 0.7103 - acc: 0.7347\n",
+      "Epoch 49/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.6601 - acc: 0.7487\n",
+      "Epoch 50/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.6626 - acc: 0.7733\n",
+      "Epoch 51/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.6456 - acc: 0.7633\n",
+      "Epoch 52/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 0.5807 - acc: 0.7847\n",
+      "Epoch 53/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 0.5697 - acc: 0.8053\n",
+      "Epoch 54/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.5487 - acc: 0.8027\n",
+      "Epoch 55/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.5587 - acc: 0.8053\n",
+      "Epoch 56/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 0.4979 - acc: 0.8227\n",
+      "Epoch 57/150\n",
+      "1500/1500 [==============================] - 44s 29ms/step - loss: 0.4926 - acc: 0.8167\n",
+      "Epoch 58/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.4459 - acc: 0.8487\n",
+      "Epoch 59/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.4789 - acc: 0.8360\n",
+      "Epoch 60/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.5122 - acc: 0.8173\n",
+      "Epoch 61/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.4989 - acc: 0.8173\n",
+      "Epoch 62/150\n",
+      "1500/1500 [==============================] - 43s 29ms/step - loss: 0.4462 - acc: 0.8567\n",
+      "Epoch 63/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 0.3820 - acc: 0.8740\n",
+      "Epoch 64/150\n",
+      "1500/1500 [==============================] - 43s 28ms/step - loss: 0.3407 - acc: 0.8947\n",
+      "Epoch 65/150\n",
+      " 640/1500 [===========>..................] - ETA: 24s - loss: 0.3072 - acc: 0.9141"
      ]
     }
    ],
    "source": [
-    "history = model.fit(X_Train,  y_train, batch_size=16, epochs=150,callbacks=callbacks,validation_data=(X_Test, y_test))"
+    "history = model.fit(X_Train,  y_train, batch_size=64, epochs=150)#,callbacks=callbacks,validation_data=(X_Test, y_test))"
    ]
   },
   {
